# doclint

./: .gitignore  README.md  flake.nix  pyproject.toml
src/doclint/: __init__.py  cli.py  extractor.py
src/queries/: python.scm
test/: example.py  test_extract_relevant_pieces.py
