[project]
name = "doclint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "rami.chowdhury@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "controlflow>=0.11.4",
    "langchain-ollama>=0.2.2",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.5",
]

[project.scripts]
doclint = "doclint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
